force-app/main/default/objects/Salesforce_Config__mdt/fields/AccessToken__c.field-meta.xml
<CustomField>
    <fullName>AccessToken__c</fullName>
    <label>access token</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>