force-app/main/default/objects/Salesforce_Config__mdt/fields/EpiresIn__c.field-meta.xml
<CustomField>
    <fullName>EpiresIn__c</fullName>
    <label>expires in ( seconds )</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>