force-app/main/default/objects/Salesforce_Config__mdt/fields/ExpiresInTime__c.field-meta.xml
<CustomField>
    <fullName>ExpiresInTime__c</fullName>
    <label>expires in time</label>
    <type>DateTime</type>
</CustomField>