force-app/main/default/objects/Salesforce_Config__mdt/fields/InstanceUrl__c.field-meta.xml
<CustomField>
    <fullName>InstanceUrl__c</fullName>
    <label>instance url</label>
    <type>Url</type>
</CustomField>