force-app/main/default/objects/Salesforce_Config__mdt/fields/RefreshToken__c.field-meta.xml
<CustomField>
    <fullName>RefreshToken__c</fullName>
    <label>refresh token</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>