force-app/main/default/objects/Salesforce_Config__mdt/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <label>scope</label>
    <type>TextArea</type>
</CustomField>