force-app/main/default/objects/Salesforce_Config__mdt/fields/TokenUrl__c.field-meta.xml
<CustomField>
    <fullName>TokenUrl__c</fullName>
    <defaultValue>&quot;/services/oauth2/token&quot;</defaultValue>
    <label>token url</label>
    <type>Url</type>
</CustomField>